--- a/client/src/components/AdminPanel/admin.scss
+++ b/client/src/components/AdminPanel/admin.scss
@@ -184,3 +184,11 @@ legend{
 .myinputs input, label{
     font-size: 20px !important;
 }
+
+#registerAdmin{
+    display: flex;
+    width: 100%;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+}
